# tiny_dds

./: .bazelrc  .clang-format  BUILD  LICENSE  MODULE.bazel  README.md  WORKSPACE
examples/: BUILD  example_message.proto  protobuf_pub_sub.cc  shared_memory_example.cc  simple_pub_sub.cc  yaml_config_example.cc
examples/config/: BUILD  dds_config.yaml
include/tiny_dds/: BUILD  auto_config.h  config.h  data_reader.h  data_writer.h  domain_participant.h  publisher.h  subscriber.h  topic.h  transport.h  transport_types.h  types.h
protos/: BUILD  dds_message.proto
src/api/: BUILD
src/config/: BUILD  auto_config.cc  config.cc
src/core/: BUILD  data_reader_impl.cc  data_reader_impl.h  data_writer_impl.cc  data_writer_impl.h  domain_participant_impl.cc  domain_participant_impl.h  publisher_impl.cc  publisher_impl.h  subscriber_impl.cc  subscriber_impl.h  topic_impl.cc  topic_impl.h
src/serialization/: BUILD  protobuf_serializer.cc  protobuf_serializer.h
src/transport/: BUILD  shared_memory_transport.cc  shared_memory_transport.h  transport_manager.cc  transport_manager.h  udp_transport.cc  udp_transport.h
test/: BUILD  domain_participant_test.cc  protobuf_serializer_test.cc  pub_sub_test.cc
test/transport/: BUILD  shared_memory_transport_test.cc
