module(
    name = "tiny_dds",
    version = "0.1.0",
)

bazel_dep(name = "googletest", version = "1.14.0")
bazel_dep(name = "protobuf", version = "21.7")
bazel_dep(name = "abseil-cpp", version = "20230802.0")
bazel_dep(name = "rules_cc", version = "0.0.4")
bazel_dep(name = "rules_proto", version = "5.3.0-21.7")
bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "yaml-cpp", version = "0.8.0")


# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/mikael-s-persson/bazel-compile-commands-extractor",
    commit = "f5fbd4cee671d8d908f37c83abaf70fba5928fc7"
)